# 8Ball-Line-Detector

./: CMakeLists.txt  README.md  line_detector  main.cpp
.cache/clangd/index/: main.cpp.E02E033CF96B4C91.idx
research/: main.py  test.mkv
